8.3 [module] Modified 'FileReader' and created tests